# better-toggl

./: BetterToggl.rc.in  CMakeLists.txt  apilogindialog.cpp  apilogindialog.hpp  apilogindialog.ui  bettertogglmainwindow.cpp  bettertogglmainwindow.hpp  bettertogglmainwindow.ui  billingexporter.cpp  billingexporter.hpp  billingsummarizer.cpp  billingsummarizer.hpp  billingsummarizerdialog.cpp  billingsummarizerdialog.hpp  billingsummarizerdialog.ui  billingsummarizerwidget.cpp  billingsummarizerwidget.hpp  billingsummarizerwidget.ui  build.h.in  busyindicator.cpp  busyindicator.hpp  busyindicatordialog.cpp  busyindicatordialog.hpp  busyindicatordialog.ui  darktheme.cpp  darktheme.hpp  exportdialog.cpp  exportdialog.hpp  exportdialog.ui  fonts.qrc  global.hpp  globalstorage.cpp  globalstorage.hpp  icons.qrc  imageviewer.cpp  imageviewer.hpp  lighttheme.cpp  lighttheme.hpp  logindialog.cpp  logindialog.hpp  (+34 more)
exporter/: excelbillingexporter.cpp  excelbillingexporter.hpp
icons/: icon.icns
logo/: BetterToggl.afdesign
toggl/: apiconstants.hpp  apiendpoints.hpp  apiinterface.cpp  apiinterface.hpp  apitypes.cpp  apitypes.hpp  timeentrylist.cpp  timeentrylist.hpp
